--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ python:
   - "3.4"
   - "nightly"
 install:
-  - "pip install -r requirements.txt""
+  - "pip install -r requirements.txt"
 script: nosetests
